# rules_quarkus

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  BUILD.bazel  CONTRIBUTING.md  MODULE.aspect  MODULE.bazel  README.md  WORKSPACE.bazel  maven_install.json  maven_install_3_27.json  maven_install_3_33.json  pmd.xml  renovate.json
.bcr/: metadata.template.json  presubmit.yml
dev/: BUILD.bazel
docs/: architecture.md  (+7 more)
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  assert_junit_xml.bzl  conditional_dependency_model_test.sh  dev_ui_application_model_test.sh  expect_test_failure.bzl  maven_install.json
e2e/smoke/big/: BUILD.bazel  dev_e2big_test.sh  dev_symlink_prefix_test.sh
e2e/smoke/ext/deployment/: BUILD.bazel
e2e/smoke/ext/runtime/: BUILD.bazel
e2e/smoke/src/conditional/java/smoke/: ConditionalMarker.java
e2e/smoke/src/main/java/smoke/: GreetingResource.java  SmokeExtResource.java
e2e/smoke/src/main/resources/: application.properties
e2e/smoke/src/test/java/smoke/: EmptyTest.java  GreetingResourceTest.java  SmokeExtResourceTest.java
examples/: MODULE.bazel  maven_install.json
examples/custom_main/: BUILD.bazel  MODULE.bazel  README.md
examples/custom_main/src/main/java/org/acme/: CustomMain.java
examples/demo_extension/: .gitignore  BUILD.bazel  MODULE.bazel  build.gradle.kts  gradle.properties  gradlew  maven_install.json  pom.xml  settings.gradle.kts
examples/demo_extension/app/: BUILD.bazel  build.gradle.kts  pom.xml
examples/demo_extension/app/src/main/resources/: application.properties
examples/demo_extension/greeting-extension/: pom.xml
examples/demo_extension/greeting-extension/deployment/: BUILD.bazel  build.gradle.kts  pom.xml
examples/demo_extension/greeting-extension/deployment/src/main/resources/dev-ui/: qwc-greeting-greetings.js
examples/demo_extension/greeting-extension/runtime/: BUILD.bazel  build.gradle.kts  pom.xml
examples/demoapp/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
examples/demoapp/libs/todo-model/: BUILD.bazel
examples/demoapp/libs/todo-service/: BUILD.bazel
examples/demoapp/src/main/resources/: application.properties
examples/helloworld/: BUILD.bazel  pom.xml
examples/helloworld_3_27/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json  pom.xml
examples/helloworld_3_27/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
examples/helloworld_3_33/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json  pom.xml
examples/helloworld_3_33/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
examples/native_image/: BUILD.bazel  MODULE.bazel  README.md
examples/native_image/src/main/docker/: Dockerfile.legacy-jar  Dockerfile.native-micro
examples/oci_images/: BUILD.bazel  MODULE.bazel  README.md
examples/oci_images/src/main/docker/: Dockerfile.jvm  Dockerfile.native
examples/pgsql/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json  pom.xml
examples/pgsql/src/main/java/org/acme/: Fruit.java  FruitResource.java
examples/pgsql/src/main/resources/: application.properties  import.sql
examples/pgsql/src/test/java/org/acme/: FruitResourceIT.java  FruitResourceTest.java
quarkifier/: BUILD.bazel  quarkifier.bzl
quarkifier/src/main/java/com/clementguillot/quarkifier/: AssembleModelCommand.java  AugmentationCommand.java  AugmentationException.java  AugmentationExecutor.java  AugmentationMode.java  BuildProperties.java  CompareModelsCommand.java  DeploymentArtifactResolver.java  DevModeLauncher.java  DiscoverExtensionsCommand.java  EnrichExtensionCommand.java  ExtensionInfo.java  ExtensionScanner.java  MavenCoordinateParser.java  MissingDeploymentArtifactException.java  QuarkifierCommand.java  QuarkifierConfig.java  QuarkifierLauncher.java  QuarkifierVersionProvider.java  VersionChecker.java
quarkifier/src/main/java/com/clementguillot/quarkifier/augmentation/: ApplicationDatWriter.java  ApplicationModelFactory.java  AugmentationExecutor.java  FastJarAssembler.java  LocalExtensionAppJars.java  NativeSourcesAssembler.java  RuntimeJarSelector.java
quarkifier/src/main/java/com/clementguillot/quarkifier/dev/: AppModelSerializerStrategy.java  DevModeLauncher.java
quarkifier/src/main/java/com/clementguillot/quarkifier/devmode/: DevModeLauncher.java
quarkifier/src/main/java/com/clementguillot/quarkifier/extension/: DeploymentArtifactResolver.java  ExtensionArtifactCoordinates.java  ExtensionInfo.java  ExtensionProjectInfo.java  ExtensionScanner.java  ExtensionYamlEnricher.java  MissingDeploymentArtifactException.java  VersionChecker.java
quarkifier/src/main/java/com/clementguillot/quarkifier/maven/: MavenCoordinateParser.java  VersionChecker.java
quarkifier/src/main/resources/: logging.properties
quarkifier/src/main/resources/model/: quarkus-bazel-model-v1.minimal.json  quarkus-bazel-model-v1.schema.json
quarkifier/src/main/resources_3_27/: quarkifier-version.properties
quarkifier/src/main/resources_3_33/: quarkifier-version.properties
quarkifier/src/test/java/com/clementguillot/quarkifier/: AugmentationModeTest.java  DeploymentArtifactResolverTest.java  DevModeLauncherTest.java  DiscoverExtensionsCommandTest.java  EnrichExtensionCommandTest.java  ExtensionScannerTest.java  MavenCoordinateParserTest.java  MissingDeploymentArtifactExceptionTest.java  PreservationPropertyTest.java  QuarkifierConfigPropertyTest.java  QuarkifierConfigTest.java  TestDataGenerator.java  TestQuarkifierConfig.java  VersionCheckerTest.java
quarkus/private/: BUILD.bazel  BazelJacocoReporter.java  BazelJacocoReporterFailureTest.java  EnrichExtensionYaml.java  application_model_aspect.bzl  augmentation.bzl  classpath_utils.bzl  dev_launcher.sh.tpl  launcher.sh.tpl  model_assembly.bzl  model_catalogs_test.bzl  native_augmentation.bzl  quarkus_app_impl.bzl  quarkus_dev_impl.bzl  quarkus_extension_impl.bzl  quarkus_native_app_impl.bzl  quarkus_native_container_app_impl.bzl  quarkus_test_impl.bzl  resolved_toolchain.bzl  test_launcher.sh.tpl  toolchains_repo.bzl  versions.bzl
(+86 files in other folders)
