module(name = "examples")

bazel_dep(name = "com_clementguillot_rules_quarkus", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "com_clementguillot_rules_quarkus",
    path = "..",
)

# Fix bazel 9.x issues
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_android", version = "0.7.1", repo_name = "rules_android")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "rules_go")

# JVM rules
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.quarkus:quarkus-rest:3.20.6",
        "io.quarkus:quarkus-arc:3.20.6",
        "io.quarkus:quarkus-core-deployment:3.20.6",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "protobuf",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

quarkus = use_extension("@com_clementguillot_rules_quarkus//quarkus:extensions.bzl", "quarkus")
quarkus.toolchain(
    lock_file = "//:maven_install.json",
    quarkifier_tool = "@com_clementguillot_rules_quarkus//quarkifier:quarkifier_lib",
    quarkus_version = "3.20.6",
)
use_repo(quarkus, "quarkus_deployment", "rules_quarkus_toolchains")
