bazel_dep(name = "com_clementguillot_rules_quarkus", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

local_path_override(
    module_name = "com_clementguillot_rules_quarkus",
    path = "../..",
)

# Fix bazel 9.x issues
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_android", version = "0.7.2", repo_name = "rules_android")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "rules_go")
