module(name = "smoke_test")

bazel_dep(name = "com_clementguillot_rules_quarkus", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

local_path_override(
    module_name = "com_clementguillot_rules_quarkus",
    path = "../..",
)

# Fix bazel 9.x issues
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_android", version = "0.7.2", repo_name = "rules_android")
bazel_dep(name = "rules_go", version = "0.62.0", repo_name = "rules_go")

# JVM rules
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

# GraalVM native-image toolchain — only needed by the manual-tagged
# //big:native_e2big_test. Same override as examples/native_image.
bazel_dep(name = "rules_graalvm", version = "0.11.1")
git_override(
    module_name = "rules_graalvm",
    commit = "0241d7a902171ce6d5647fa45f7f4789626edb4f",
    remote = "https://github.com/sgammon/rules_graalvm.git",
)

gvm = use_extension("@rules_graalvm//:extensions.bzl", "graalvm")
gvm.graalvm(
    name = "graalvm",
    distribution = "ce",
    java_version = "25",
    version = "25.0.1",
)
use_repo(gvm, "graalvm")

# Register only the GraalVM SDK toolchain (@rules_graalvm//graalvm/toolchain
# type, consumed by quarkus_native_app_rule). Deliberately NOT registering
# @graalvm//:jvm: that would put GraalVM in the Java toolchain candidate set
# and force the ~300 MB download for every smoke build instead of only when
# //big:app_native is requested.
register_toolchains("@graalvm//:sdk")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.quarkus:quarkus-rest:3.33.2",
        "io.quarkus:quarkus-arc:3.33.2",
        # Activates quarkus-rest's normal conditional quarkus-rest-kotlin dependency.
        "io.quarkus:quarkus-kotlin:3.33.2",
        # Custom-extension build deps (deployment modules + annotation processor)
        "io.quarkus:quarkus-arc-deployment:3.33.2",
        "io.quarkus:quarkus-core-deployment:3.33.2",
        "io.quarkus:quarkus-extension-processor:3.33.2",
        "io.quarkus:quarkus-junit:3.33.2",
        "io.rest-assured:rest-assured:5.5.6",
        "org.junit.jupiter:junit-jupiter:5.13.4",
        "org.junit.platform:junit-platform-console-standalone:1.13.4",
        "org.junit.platform:junit-platform-launcher:1.13.4",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

quarkus = use_extension("@com_clementguillot_rules_quarkus//quarkus:extensions.bzl", "quarkus")
quarkus.toolchain(
    lock_file = "//:maven_install.json",
    quarkifier_source_dir = "@com_clementguillot_rules_quarkus//:MODULE.bazel",
    quarkus_version = "3.33.2",
)
use_repo(quarkus, "rules_quarkus")
