# Override http_archive for local testing
local_repository(
    name = "com_clementguillot_rules_quarkus",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_quarkus setup #
######################
# Fetches the rules_quarkus dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_clementguillot_rules_quarkus//quarkus:repositories.bzl", "rules_quarkus_dependencies")

rules_quarkus_dependencies()
