load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_quarkus//quarkus:defs.bzl", "quarkus_app", "quarkus_test")

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:io_quarkus_quarkus_arc",
        "@maven//:io_quarkus_quarkus_rest",
        "@maven//:jakarta_ws_rs_jakarta_ws_rs_api",
    ],
)

java_library(
    name = "test_lib",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":lib",
        "@maven//:io_quarkus_quarkus_junit",
        "@maven//:io_rest_assured_rest_assured",
        "@maven//:org_hamcrest_hamcrest",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

quarkus_app(
    name = "helloworld",
    test_deps = [":test_lib"],
    version = "1.0.0",
    deps = [":lib"],
)

quarkus_test(
    name = "test",
    deps = [
        ":test_lib",
        "@maven//:io_quarkus_quarkus_junit",
        "@maven//:io_rest_assured_rest_assured",
        "@maven//:org_hamcrest_hamcrest",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
        "@maven//:org_junit_platform_junit_platform_launcher",
    ],
)
