# Private implementation details for rules_quarkus.

load(":model_catalogs_test.bzl", "model_catalogs_test_suite")

exports_files([
    "application_model_aspect.bzl",
    "launcher.sh.tpl",
    "model_catalogs_test.bzl",
    "model_assembly.bzl",
    "dev_launcher.sh.tpl",
    "test_launcher.sh.tpl",
    "quarkus_app_impl.bzl",
    "quarkus_dev_impl.bzl",
    "quarkus_test_impl.bzl",
    "classpath_utils.bzl",
    "versions.bzl",
])

model_catalogs_test_suite()
